# learn_opengl

./: .gitignore  CMakeLists.txt  main.cpp  shader.cpp  shader.h
assets/: brick_container.mtl  container.mtl  floor.mtl  grass.mtl  window.mtl
assets/planet/: planet.mtl
assets/rock/: rock.mtl
glad/: glad.c
include/: camera.h  framebuffer.h  instance.h  light.h  mesh.h  model.h  object.h  postprocess.h  program.h  shader.h  texture.h  window.h
include/KHR/: khrplatform.h
include/glad/: glad.h
include/postprocess/: bloom.h
shaders/: fragment.glsl  vertex.glsl
shaders/basics/: fragment.glsl  vertex.glsl
shaders/blending/: basic_frag.glsl  grass_frag.glsl  window_frag.glsl
shaders/common/postprocess/: frag_bloom_add.glsl  frag_blur_h.glsl  frag_tm_reinhard.glsl
shaders/deferred-rendering/: d_frag.glsl  d_vert.glsl  g_frag.glsl
shaders/instancing/: fragment.glsl  vertex_rock.glsl
shaders/lighting/: fragment.glsl  vertex.glsl
shaders/model/: fragment.glsl
shaders/point-shadow/: fragment.glsl  light_frag.glsl  pp_frag_bloom.glsl  pp_frag_blur_h.glsl  pp_frag_blur_v.glsl  pp_frag_tm_aces.glsl  pp_frag_tm_none.glsl  shadow_frag.glsl  shadow_geom.glsl  vertex.glsl
shaders/post-processing/: basic_frag.glsl  pp_frag_blur.glsl  pp_frag_edge_detect.glsl  pp_frag_gray.glsl  pp_frag_sharpen.glsl  pp_vertex.glsl
shaders/postprocess/: basic_frag.glsl  pp_frag_id.glsl  pp_frag_invert.glsl
shaders/shadow-map/: fragment.glsl  shadow_vert.glsl  vertex.glsl
shaders/skybox/: basic_frag.glsl  sky_frag.glsl  sky_vert.glsl  vertex.glsl
src/: 01-basics.cpp  02-lighting.cpp  03-model.cpp  04-blending.cpp  05-post-processing.cpp  06-skybox.cpp  07-instancing.cpp  08-shadow-map.cpp  09-point-shadow.cpp  10-deferred-rendering.cpp  camera.cpp  framebuffer.cpp  instance.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  object.cpp  postprocess.cpp  program.cpp  shader.cpp  texture.cpp  window.cpp
src/postprocess/: bloom.cpp
